include_HEADERS = \
	libfsext.h

pkginclude_HEADERS = \
	libfsext/codepage.h \
	libfsext/definitions.h \
	libfsext/error.h \
	libfsext/extern.h \
	libfsext/features.h \
	libfsext/types.h

EXTRA_DIST = \
	libfsext.h.in \
	libfsext/definitions.h.in \
	libfsext/features.h.in \
	libfsext/types.h.in

DISTCLEANFILES = \
	libfsext.h \
	libfsext/definitions.h \
	libfsext/features.h \
	libfsext/types.h \
	Makefile \
	Makefile.in

