MSVSCPP_FILES = \
	fsext_test_bitmap/fsext_test_bitmap.vcproj \
	fsext_test_directory_entry/fsext_test_directory_entry.vcproj \
	fsext_test_error/fsext_test_error.vcproj \
	fsext_test_group_descriptor/fsext_test_group_descriptor.vcproj \
	fsext_test_inode/fsext_test_inode.vcproj \
	fsext_test_inode_table/fsext_test_inode_table.vcproj \
	fsext_test_io_handle/fsext_test_io_handle.vcproj \
	fsext_test_notify/fsext_test_notify.vcproj \
	fsext_test_superblock/fsext_test_superblock.vcproj \
	fsext_test_support/fsext_test_support.vcproj \
	fsext_test_volume/fsext_test_volume.vcproj \
	fsextinfo/fsextinfo.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfsext/libfsext.vcproj \
	libuna/libuna.vcproj \
	pyfsext/pyfsext.vcproj \
	libfsext.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

